--- a/CLDRMessagesGenerator/CLDRMessagesGenerator.csproj
+++ b/CLDRMessagesGenerator/CLDRMessagesGenerator.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{BA1ECEB3-5DFC-43A1-B23F-6B0452DF6DC9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CLDRMessagesGenerator</RootNamespace>
+    <RootNamespace>Com.AzureSeed.CLDRMessagesGenerator</RootNamespace>
     <AssemblyName>CLDRMessagesGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +50,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Model\Archive.cs" />
+    <Compile Include="Model\KeyWord.cs" />
+    <Compile Include="Model\Locale.cs" />
+    <Compile Include="Model\Message.cs" />
+    <Compile Include="Model\MessageData.cs" />
+    <Compile Include="Model\Translation.cs" />
+    <Compile Include="Messages\MessagesArchive.cs" />
+    <Compile Include="UI\EditingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="UI\EditingForm.Designer.cs">
+      <DependentUpon>EditingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\StartForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\StartForm.Designer.cs">
+      <DependentUpon>StartForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\UtilMessages.cs" />
+    <EmbeddedResource Include="UI\EditingForm.resx">
+      <DependentUpon>EditingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\StartForm.resx">
+      <DependentUpon>StartForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,7 +86,10 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
+    <None Include="Properties\DataSources\Com.AzureSeed.CLDRMessagesGenerator.Model.Translation.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
